<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/close_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/a_navbar_back"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"/>


    <ImageView
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:src="@mipmap/ic_launcher"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/message_title"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:text="@string/commit_success"/>

    <TextView
        android:id="@+id/commit_success_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/message_desc"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="12dp"
        android:text="@string/commit_success_tip"/>

    <TextView
        android:id="@+id/to_real_account"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/change_real_btn"
        android:layout_marginTop="50dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:textColor="@color/account_theme_color"
        android:background="@drawable/btn_stroke_bg"/>

    <TextView
        android:id="@+id/deposit_again"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/deposit_again"
        android:layout_marginTop="18dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:textColor="@color/common_set_white"
        android:background="@drawable/btn_solid_bg"/>

    <TextView
        android:id="@+id/to_custom_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/account_theme_color"
        android:padding="6dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/connect_service"/>
</LinearLayout>
